test/libsolidity/syntaxTests/constructor/constructor_internal_function.sol
contract A {
    constructor(function() internal) {}
}
// ----
// TypeError 4103: (29-49): Internal type is not allowed for public or external functions. You can make the contract abstract to avoid this problem.
